src/app/app.component.css
/* ... */
h4 {
  margin: 10px;
}

p {
  text-align: left;
}

button {
  box-shadow: 4px 4px 4px 0px rgba(100, 70, 70, 0.226);
  border-width: 1px;
}

.container {
  display: flex;
  flex-grow: 1;
  max-height: 97dvh;
}


.container>div:first-child {
  width: 150px;
  flex-shrink: 0;  /* Prevent shrinking */
  display: flex;
  flex-direction: column;
}

.dice-group {
  display: flex;
  margin-left: 5px;
  gap: 15px;
  opacity: 1;
  max-height: 500px; /* Set to a value larger than the expected content height */
  transform: translateY(0);
  transition:
    opacity 0.5s ease,
    max-height 0.5s cubic-bezier(0.4, 0, 0.2, 1),
    transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
  pointer-events: auto;
  height: auto;
}

.dice-group.hidden {
  opacity: 0;
  max-height: 0;
  transform: translateY(-40px);
  pointer-events: none;
}

.dice-group.visible {
  opacity: 1;
  max-height: 500px;
  transform: translateY(0);
  pointer-events: auto;
}

.sub-column {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.dice {
  width: 50px;
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 2px solid #ccc;
  border-radius: 5px;
  background-color: #f9f9f9;
  font-size: 18px;
  font-weight: bold;
  cursor: pointer;
  transition: background-color 0.3s, transform 0.2s;
  box-shadow: 4px 4px 4px 0px rgba(100, 70, 70, 0.226);
  color: white;
  background-color: rgb(59, 38, 134);
}

.dice.disabled {
  pointer-events: none;
  opacity: 0.5;
  filter: grayscale(0.7);
  background: #e0e0e0;
  color: #888;
  border-color: #ccc;
  cursor: not-allowed;
}

.dice:hover {
  background-color: #e0e0e0;
  transform: scale(1.1);
  color: black;
  border-color: #35393d;
}

.dice.selected {
  border-color: #007bff;
  background-color: #cce5ff;
  color: black
}

.dice.has-selected {
  opacity: 0.7;
}

.gradient-btn {
  padding: 10px 20px;
  border: none;
  border-radius: 5px;
  background: linear-gradient(45deg, #007bff, #0056b3);
  color: white;
  font-size: 16px;
  cursor: pointer;
  transition: background 0.3s, transform 0.2s;
}

.gradient-btn:hover {
  background: linear-gradient(45deg, #0056b3, #003f7f);
  transform: scale(1.05);
}

.side-bar-container {
  display: flex;
  flex-direction: column;
  align-items: left;
}

.color-settings-btn {
  width: 80%;
  background-color: #0b5fb8;
  color: white;
  border-radius: 10px;
  text-align: center;
  border-style: outset;
  border-color: rgb(63, 37, 75);
  margin-bottom: 10px;
}

.end-button {
  margin-bottom: 10px;
  background-color: #f17c82;
}

.undo-container {
  height: 50px;
  width: 50px;
  border-radius: 8px;
  background: #f8f8f8;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0.2em 0;
  box-shadow: 0 2px 4px rgba(0,0,0,0.07);
  transition: background 0.2s, box-shadow 0.2s;
}

.undo-button {
  margin-bottom: 5px;
  width: 50px; 
  height: 50px;
  border-radius: 50%; 
  border: 1px solid #8381b3;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.8); 
  transition: background-color 0.3s, transform 0.2s; 
  background-color: #b6d34c;
  color:#a52525;
  font-weight: bolder;
  height: 100%;
  width: 100%;
  background-color: grey;
}

.counter {
  font-size: 16px;
  text-align: center;
  cursor: default;
}

.counter-val {
  font-size: 20px;
  font-weight: bold;
  color: #007bff;
}

.counter-avg {
  font-size: 14px;
  color: #6c757d;
  margin-left: 5px
}

.bar-container {
  display: flex;
  flex-direction: column;  /* Stack bar-box elements vertically */
  justify-content: space-between;  /* Distribute bar-box elements evenly */
  align-items: flex-start;  /* Align items to the left */
  background-color: white;
  padding-left: 10px;
  border-radius: 10px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  height: calc(100dvh - 20px);
  overflow-y: auto;
  overflow-x: hidden;
}

.bar-box {
  display: flex;
  align-items: center;  /* Align bar-number and bar horizontally */
  width: calc(100vw - 185px);  /* Ensure bars stretch horizontally */
  flex-grow: 1;  /* Allow bar-box to grow and fill vertical space proportionally */
  position: relative;  /* For overlay positioning */
  background: white;  /* fixes issue in Safart where overlay is white on white instead of contrasting */
}

.bar-number {
  font-size: 34px;
  font-weight: bold;
  margin-right: 10px;  /* Add spacing between the number and the bar */
  width: 35px;
  text-align: center;
  cursor: default;
}

.bar {
  height: calc((100dvh - 100px)/11);
  border-radius: 5px;
  transition: width 0.3s;
}

.bar-overlay {
  position: absolute;
  top: 0;
  left: 80px;
  height: auto;  /* Allow height to adjust based on content */
  width: calc(100vw - 250px);
  pointer-events: none;  /* Prevent interaction */
  white-space: normal;  /* Allow text to wrap to the next line */
  word-wrap: break-word;  /* Break long words if necessary */
  overflow-wrap: break-word;  /* Ensure compatibility for breaking long words */
  word-break: break-word;  /* Ensure long words break */
  display: block;
  box-sizing: border-box;  /* Include padding in the element's width */
  line-height: 0.6;
  cursor: default;
  color: white !important;
  mix-blend-mode: difference;
}

@media (max-width: 768px) {
  .bar-overlay {
    width: calc(100vw - 100px);
  }
}

.bar-overlay span {
  pointer-events: auto;  /* Enable pointer events only for the text */
  display: inline-block;  /* Ensure the span wraps only the text */
}

@keyframes slide-in {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.bar-count {
  font-size: 34px;
  color: red;
  width: 35px;
  height: 35px;
  display: flex;  /* Use flexbox for centering */
  align-items: center; 
  justify-content: left; 
  text-align: center;
  cursor: default;
}

.bar-percent {
  font-size: 24px;
}

.percent-sign {
  font-size: 14px;
  vertical-align: super;
  color: black;
  margin-right: 5px;
}
/* ... */

